force-app/main/default/objects/Limit__c/Limit__c.object-meta.xml
<CustomObject>
    <label>Limit</label>
    <nameField>
        <displayFormat>Limit-{0}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Limits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>