force-app/main/default/objects/Limit__c/fields/API_Version_Count__c.field-meta.xml
<CustomField>
    <fullName>API_Version_Count__c</fullName>
    <label>API Version Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>