force-app/main/default/objects/Limit__c/fields/API_Version_Range__c.field-meta.xml
<CustomField>
    <fullName>API_Version_Range__c</fullName>
    <label>API Version Range</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10-20</fullName>
            </value>
            <value>
                <fullName>20-30</fullName>
            </value>
            <value>
                <fullName>30-40</fullName>
            </value>
            <value>
                <fullName>40-50</fullName>
            </value>
            <value>
                <fullName>50-60</fullName>
            </value>
            <value>
                <fullName>60-70</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>