force-app/main/default/objects/Limit__c/fields/Limit_Name__c.field-meta.xml
<CustomField>
    <fullName>Limit_Name__c</fullName>
    <label>Limit Name</label>
    <type>TextArea</type>
</CustomField>