force-app/main/default/objects/Limit__c/fields/Limit_Name_Ext__c.field-meta.xml
<CustomField>
    <fullName>Limit_Name_Ext__c</fullName>
    <externalId>true</externalId>
    <label>Limit Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>