force-app/main/default/objects/Limit__c/fields/Limit_Type__c.field-meta.xml
<CustomField>
    <fullName>Limit_Type__c</fullName>
    <label>Limit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily Limit</fullName>
            </value>
            <value>
                <fullName>Data Limit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>