force-app/main/default/objects/Limit__c/fields/Record_Date__c.field-meta.xml
<CustomField>
    <fullName>Record_Date__c</fullName>
    <label>Record Date</label>
    <type>DateTime</type>
</CustomField>