force-app/main/default/objects/Limit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Limit_Name__c</columns>
    <columns>Remaining__c</columns>
    <columns>Record_Date__c</columns>
    <columns>Max__c</columns>
    <columns>API_Version_Range__c</columns>
    <columns>API_Version_Count__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>